fix(website): show description on small devides

--- a/packages/website/components/RepositoryCard.module.less
+++ b/packages/website/components/RepositoryCard.module.less
@@ -94,18 +94,5 @@
         text-overflow: clip;
       }
     }
-
-    .views.has-extra {
-      .description {
-        height: 0px;
-        width: 0px;
-        opacity: 0;
-      }
-      .extra {
-        height: 100%;
-        width: 100%;
-        opacity: 1;
-      }
-    }
   }
 }
